--- a/_assets/sass/_styles.scss
+++ b/_assets/sass/_styles.scss
@@ -17,6 +17,7 @@
 /* ==========================================================================
    Show/Hide Content
    ========================================================================== */
+
 .bv-hidden{display: none;}
 
 @media only screen and (max-width: 1024px) {
@@ -24,6 +25,10 @@
 .bv-hidden{ display: block;}
 }
 
+
+.bv-swap{
+  float:right!important;
+}
 
 
 /* ==========================================================================
@@ -38,51 +43,9 @@
 
     &--right   {
       background-attachment: fixed;
-      background-position: center;
+      background-position: right;
       background-repeat: no-repeat;
       background-size: cover;}
-
-    &--darkest   {
-      background-attachment: fixed;
-      background-color: rgba(0,0,0,0.8);
-      background-blend-mode: multiply;
-      background-position: center;
-      background-size: cover;}
-      &--darker   {
-      background-attachment: fixed;
-      background-color: rgba(0,0,0,0.5);
-      background-blend-mode: multiply;
-      background-position: center;
-      background-size: cover;}
-
-      &--dark   {
-      background-attachment: fixed;
-      background-color: rgba(0,0,0,0.3);
-      background-blend-mode: multiply;
-      background-position: center;
-      background-size: cover;}
-
-      &--lightest   {
-      background-attachment: fixed;
-      background-color: rgba(250,250,250,0.9);
-      background-blend-mode: lighten;
-      background-position: center;
-      background-size: cover;
-      }
-
-      &--lighter   {
-      background-attachment: fixed;
-      background-color: rgba(250,250,250,0.7);
-      background-blend-mode: lighten;
-      background-position: center;
-      background-size: cover;
-      }
-      &--light   {
-      background-attachment: fixed;
-      background-color: rgba(250,250,250,0.6);
-      background-blend-mode: color;
-      background-position: center;
-      background-size: cover; }
 
 }
 
@@ -94,7 +57,6 @@
   background-image: none!important;
 
   &--black{
-
     background-image: none!important;
     background-color: #000;}
 }
@@ -103,29 +65,6 @@
       background-attachment: scroll;
       background-size: cover;
 
-
-    &--darkest   {
-      background-attachment: scroll;
-      background-size: cover;
-    }
-      &--darker   {
-        background-attachment: scroll;
-        background-size: cover;
-      }
-      &--dark   {
-        background-attachment: scroll;
-        background-size: cover;
-        }
-
-      &--lighter   {
-        background-attachment: scroll;
-        background-size: cover;
-
-      }
-      &--light   {
-        background-attachment: scroll;
-        background-size: cover;
-     }
     }
 
 }
