--- a/_assets/sass/nav/_page.scss
+++ b/_assets/sass/nav/_page.scss
@@ -3,7 +3,7 @@
 $page-nav-height:    75px;
 $page-nav-height-sm: 60px;
 $page-nav-width-bp:  620px;
-$page-nav-color:     #b2cad7;
+$page-nav-color:     $white;
 
 
 // global page nav height
@@ -17,6 +17,7 @@ $page-nav-color:     #b2cad7;
 }
 
 .page-nav {
+  box-shadow: 0px 0px 10px 0px rgba($black,.1);
   position: relative;
   background-color: rgba($page-nav-color,.9);
   text-align: center;
@@ -39,7 +40,7 @@ $page-nav-color:     #b2cad7;
     bottom: 0;
     z-index: $z-nav-upper;
     width: $page-nav-height-sm;
-    
+
     background-image: url("../img/icons/nav-arrow.svg");
     background-position: center;
     background-repeat: no-repeat;
@@ -77,7 +78,7 @@ $page-nav-color:     #b2cad7;
   &__item {
     display: flex;
     flex: 1 0 auto;
-    // border-right: 1px solid rgba($white,.15);
+    border-right: 1px solid rgba($grey-light,.3);
     &:last-child { border-right: 0; }
   }
   &__link {
