--- a/_includes/page/gallery.html
+++ b/_includes/page/gallery.html
@@ -6,7 +6,7 @@
     <div class="row row--valign-center row--gutters-md row--6-6">
 
       <div class="col">
-        <div class="titleo title--sm" >{{section.title}}</div>
+        <div class="sub-title sub-title--lg " >{{section.title}}</div>
         <div class="space--xs"></div>
         <p>{{section.description}} </p>
       </div>
