--- a/_assets/sass/nav/_site.scss
+++ b/_assets/sass/nav/_site.scss
@@ -1,9 +1,9 @@
 // styles for the microsite nav
 
-$site-nav-height:    56px;
+$site-nav-height:    65px;
 $site-nav-height-sm: 44px;
 $nav-width-bp:       800px;
-$nav-color:          $grey-darker;
+$nav-color:          $white;
 
 
 // global site nav height
@@ -20,7 +20,7 @@ $nav-color:          $grey-darker;
   position: relative;
   z-index: $z-nav;
   width: 100%;
-  background-color: rgba($nav-color,.8);
+  background-color: rgba($nav-color,0);
   text-align: center;
 
   // NEEDS EXPLAINING LIKE THE CORE NAV OFFSET
@@ -78,7 +78,7 @@ $nav-color:          $grey-darker;
   &__item {
     display: flex;
     flex: 1 0 auto;
-    border-right: 1px solid rgba($white,.15);
+    //border-right: 1px solid rgba($white,.15);
     &:last-child { border-right: 0; }
   }
   &__link {
@@ -96,8 +96,8 @@ $nav-color:          $grey-darker;
     color: $white;
     transition: background-color $transition-time ease;
     white-space: nowrap;
-    &.is-current      { background-color: rgba($nav-color,.66); }
-    .no-touch &:hover { background-color: rgba($nav-color,1); }
+    &.is-current      { box-shadow: 0px 0px 40px 0px rgba($nav-color,.3) inset;  }
+    .no-touch &:hover { box-shadow: 0px 0px 0px 1px rgba($nav-color,.2) inset;  }
   }
 
   // js-sticky-nav style
