--- a/_includes/nav/site.html
+++ b/_includes/nav/site.html
@@ -4,7 +4,7 @@
 <!-- pages that appear in the site navigation -->
 {% assign nav-pages = site.html_pages | where: 'nav', 'true' | sort: 'nav-order' %}
 
-<div class="site-nav {% if include.theme == "footer" %} site-nav--footer{% endif %}">
+<div class="site-nav vpad--xs {% if include.theme == "footer" %} site-nav--footer{% endif %}">
   <div class="site-nav__scroll-wrap">
     <div class="site-nav__wrap">
 
