--- a/_assets/sass/typography/_text.scss
+++ b/_assets/sass/typography/_text.scss
@@ -20,6 +20,8 @@
   // colours
   &--white { color: $grey-lightest; }
   &--black { color: $grey-dark; }
+  &--darkblue { color: $g-darkblue; }
+
 
   // alignment
   &--left   { text-align: left; }
