--- a/_assets/sass/typography/_titles.scss
+++ b/_assets/sass/typography/_titles.scss
@@ -4,7 +4,7 @@
 
   // custom content headline
   font-family: $font-title-01;
-  &--xxxl   { font-size: $s8; }
+  &--xxxl   { font-size: $s9; }
   &--xxl    { font-size: $s7; }
   &--xl     { font-size: $s6; }
   &--lg     { font-size: $s5; }
@@ -31,13 +31,16 @@
 
   // custom content headline
   font-family: $font-deco;
+  line-height: 1.3em;
     font-size: $s2; // default size
+  &--xl     { font-size: $s5; }
   &--lg     { font-size: $s4; }
   &--sm     { font-size: $s0; }
   @include bp($lg){
     font-size: $s3; // default size
+    &--xl     { font-size: $s6; }
     &--lg     { font-size: $s5; }
-    &--sm     { font-size: $s1; }
+    &--sm     { font-size: $s2; }
   }
 
 }
