--- a/_includes/page/content.html
+++ b/_includes/page/content.html
@@ -1,22 +1,20 @@
 
+
 {% for section in site.data.[page.id] %}
 
-<div id="{{section.id}}" class="{% cycle 'bg--g-darkblue', 'bg--white' %}" >
-  <div class="harvey {% cycle '', 'harvey--swap' %} ">
 
-      <div class=" harvey__text {% cycle 'text--white', 'text--black' %}" >
-        <div class="sub-title sub-title--lg " >{{section.title}}</div>
-        <div class="space--xs"></div>
-        <p>{{section.description}} </p>
-      </div>
-
-      <div class="harvey__img" >
-        <div class="bg-img bg-img--3-2" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-img/{{section.img}}.jpg');"></div>
-      </div>
+<div id="{{section.id}}" class="harvey{% cycle ' harvey--swap', '' %} {% cycle 'bg--white', 'bg--g-darkblue' %}">
+  <div class="harvey__img " style="background-image: url('{{site.img}}/content/{{page.id}}/bg-img/{{section.img}}.jpg');">
+    <a href="{{site.baseurl}}{{page.url}}" class="harvey__link"></a>
+  </div>
+  <div class="harvey__text  {% cycle 'text--black', 'text--white' %}">
+    <h2 class="sub-title sub-title--lg ">{{section.title}}</h2>
+    <p>{{section.description}}</p>
+    <div class="space--sm"></div>
 
   </div>
-
 </div>
+
 
 
 {% endfor %}
