--- a/_includes/page/gallery.html
+++ b/_includes/page/gallery.html
@@ -1,11 +1,11 @@
 
 {% for section in site.data.[page.id] %}
 
-<div id="{{section.id}}" class="{% cycle 'bg--light', 'bg--white' %} js-nav-section vpad--xl " >
+<div id="{{section.id}}" class="{% cycle 'bg--light', 'bg--light' %} js-nav-section vpad--xl bv-parallax" style="background-image: url('{{site.img}}/content/{{page.id}}/bg-img/{{section.img}}.jpg'); background-blend-mode: overlay" >
   <div class="container">
     <div class="row row--valign-center row--gutters-md row--6-6">
 
-      <div class="col">
+      <div class="col {% cycle '', '' %} text text--normal text--xl">
         <div class="sub-title sub-title--lg " >{{section.title}}</div>
         <div class="space--xs"></div>
         <p>{{section.description}} </p>
@@ -21,12 +21,12 @@
     {% for poi in section.pois.items %}
       <div id="tracking-poi-{{poi.id}}" class="col col--lg-6 col--xxl-4 text--center js-open-modal" data-open-modal="{{poi.id}}" data-modal-group="section">
         <div class="bv-modal" >
-          <div class="highlight__image bg-img  bg-img--3-2" style="background-image:url('{{site.img}}/content/{{page.id}}/gallery/{{poi.id}}.jpg'); ">
-            <div class="bv-lineheight text-deco text-deco text--xxxl text--white" style=" padding-bottom:{{poi.pad-bottom}};padding-top:{{poi.pad-top}}; height:30px;">{{poi.title}}</div></div>
+          <div class="highlight__image bg-img  bg-img--3-2" style="background-image:url('{{site.img}}/content/{{page.id}}/gallery/{{poi.id}}.jpg'); "></div>
             <div class="bg--white boxpad--lg">
-
+              <div class="bv-lineheight title title--xs bv-lineheight" style="padding-bottom:{{poi.pad-bottom}};padding-top:{{poi.pad-top}}; ">{{poi.title}}</div>
+              <div class="space--xs"></div>
                 <div class="bv-box-height text text--md">{{poi.description}}</div>
-                <div class="title title--sm" style="margin-top:-10px; margin-bottom:10px;">...</div>
+                <div class="title title--sm bv-box-height--3dots">...</div>
 
               <div class="space--xxs"></div>
               <div class=" text--bold bv-text-colour3">Mehr erfahren</div>
