--- a/_includes/nav/core-list.html
+++ b/_includes/nav/core-list.html
@@ -1,6 +1,6 @@
 <div class="{{include.block}}">
-  <a class="{{include.block}}-link" href="https://www.secretescapes.de/aktuelle-angebote">Aktuelle Angebote</a>
-  <a class="{{include.block}}-link" href="https://www.secretescapes.de/top-destinations">Beliebte Reiseziele</a>
-  <a class="{{include.block}}-link" href="https://www.secretescapes.de/strandurlaub/filter">Strandurlaub</a>
+  <a class="{{include.block}}-link" href="https://www.secretescapes.de/aktuelle-angebote?utm_source=SE&utm_medium=hub&utm_campaign=griechenland_DE_18">Aktuelle Angebote</a>
+  <a class="{{include.block}}-link" href="https://www.secretescapes.de/top-destinations?utm_source=SE&utm_medium=hub&utm_campaign=griechenland_DE_18">Beliebte Reiseziele</a>
+  <a class="{{include.block}}-link" href="https://www.secretescapes.de/strandurlaub/filter?utm_source=SE&utm_medium=hub&utm_campaign=griechenland_DE_18">Strandurlaub</a>
   <a class="{{include.block}}-link is-current" href="{{ site.baseurl }}">{{ site.title }}</a>
 </div>
