--- a/_includes/offer/offer.html
+++ b/_includes/offer/offer.html
@@ -16,7 +16,7 @@
   <div class="offer__content text--left">
 
     <h3 class="sub-title sub-title--sm text--darkblue">{{offer.title}}</h3>
-    <h4 >{{offer.location}}</h4>
+    <h4 class="offer__location">{{offer.location}}</h4>
     <div class="offer__description">{{offer.description}}</div>
 
     <div class="offer__bottom">
