--- a/_assets/sass/components/_offer.scss
+++ b/_assets/sass/components/_offer.scss
@@ -42,11 +42,11 @@ $offer-max-width: 600px;
     margin-left: 1.5em;
     margin-bottom: 1.15em;
     text-indent: -1.5em;
-    font-size: 0.75em;
-    line-height: 1.5;
+    font-size: 0.9em;
+    line-height: 1.4;
     text-transform: uppercase;
     letter-spacing: 0.05em;
-    font-weight: 600;
+    font-weight: normal;
     color: $grey;
     &:before {
       content: "";
@@ -56,6 +56,7 @@ $offer-max-width: 600px;
       margin-right: .5em;
       margin-bottom: .2em;
       vertical-align: middle;
+      background-image: url( "../img/icons/map-pin.svg" );
       background-position: center;
       background-repeat: no-repeat;
       background-size: 100%;
