--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -18,7 +18,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>{{meta-title}}</title>
   <meta name="description" content="{{meta-description}}">
   <!-- START Social Data -->
